--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "dev": "rollup --c rollup.config.dev.ts --watch",
         "build": "rollup --c rollup.config.build.ts",
         "commit": "cz",
-        "npmp": "node npmpublish"
+        "npmp": "node npmpublish",
+        "test": "jest",
+        "coverage": "jest --coverage"
     },
     "typings": "./dist/index.d.ts",
     "main": "./dist/index.umd.js",
@@ -27,6 +29,7 @@
         "@rollup/plugin-babel": "^5.3.0",
         "@rollup/plugin-node-resolve": "^13.0.0",
         "@rollup/plugin-typescript": "^8.2.1",
+        "@types/jest": "^26.0.24",
         "@types/node": "^16.3.3",
         "@typescript-eslint/parser": "^4.28.2",
         "chalk": "^2.4.2",
@@ -37,6 +40,7 @@
         "eslint-plugin-import": "^2.23.4",
         "execa": "^5.1.1",
         "inquirer": "^6.5.2",
+        "jest": "^27.0.6",
         "ora": "^5.4.1",
         "rollup": "^2.53.1",
         "rollup-plugin-babel": "^4.4.0",
@@ -44,6 +48,7 @@
         "rollup-plugin-dts": "^3.0.2",
         "rollup-plugin-livereload": "^2.0.5",
         "rollup-plugin-terser": "^7.0.2",
+        "ts-jest": "^27.0.4",
         "typescript": "^4.3.5"
     },
     "config": {
