--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,13 @@
         "Dingding",
         "Wechat",
         "Wxmp",
+        "applewebkit",
+        "dingtalk",
         "execa",
+        "ipad",
+        "iphone",
+        "ipod",
+        "micromessenger",
         "miniprogram",
         "npmp",
         "npmpublish",
